--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 		</style>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu4jIGqO52nAL52Hlf-MNu5fgX9NZn0T4" type="text/javascript">
 		</script>
-		<script src="knockout-3.3.0.js"></script>
+		<script src="knockout-3.3.0.js" type="text/javascript"></script>
 		<script src="jquery-1.11.3.min.js"></script>
 		<script src="app.js"></script>
 	</head>
 	<body>
 		<div class='header'>
 			<label>Search:</label>
-			<input type="text" placeholder='Filter places...' data-bind="value:currentLocation().names, valueUpdate:'keyup'">
+			<input type="text" placeholder='Filter places...'>
+			<!--data-bind="value:currentLocation().names, valueUpdate:'keyup'"-->
 		</div>
 		<div class='list'>
 			<h3>Key Locations</h3>
