updated Model and VM

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		</div>
 		<div class='list'>
 			<h3>Key Locations</h3>
-			<ul data-bind="foreach: pins">
-				<li><span data-bind="text: name, click: $parent.show_info"></span>
+			<ul data-bind="foreach: initialPlaces">
+				<li><span data-bind="text: name"></span>
 				</li>
 			</ul>
 		</div>
