updated app js, removed extra files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class='list'>
 			<h3>Key Locations</h3>
 			<ul data-bind="foreach: initialPlaces">
-				<li><span data-bind="text: name"></span>
+				<li><span data-bind="text: name, click: show_info"></span>
 				</li>
 			</ul>
 		</div>
