--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 		<meta charset="utf-8">
 		<title>Kacy's Project 5</title>
 		<meta name="viewport" content="width=device-width">
+		<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 		<style type="text/css">
 		  html { height: 100% }
-		  body { height: 100%; margin: 0; padding: 0 }
-		  #map-canvas { width: 75%; height: 75%; float: right; position: relative;}
-		  .list { float: left; position: relative;}
+		  body { height: 100%; width: 100%; margin: 0; padding: 15px; font-family: 'Indie Flower', cursive; position: absolute;}
+		  .list { position: relative; float:left; }		  
+		  /*#map-canvas { width: 100%; height: 100%; position: relative; float: right;}*/
+		  .locList { list-style: none; margin-left: -30px; }
+		  label { font-size: x-large; font-weight: bold; }
+		  input { font-size: large; }
+		  .header { display: block; }
+		  .middle { display: -webkit-flex; display: flex; -webkit-flex-flow: row; flex-flow: row; }
+		  .middle > .list { -webkit-flex: 1 1 25%; flex: 1 1 25%; -webkit-order: 1; order: 1;}
+		  .middle > #map-canvas { -webkit-flex: 3 1 75%; flex: 3 1 75%; -webkit-order: 2; order: 2;}
+		  .footer { display: block; }
+		  img { position: fixed; bottom: 0px; left: 45%; }
+		  @media all and (max-width: 640px){
+		  	.middle, html { -webkit-flex-flow: column; flex-direction: column; }
+		  	.middle > .list, .middle > .mapCanvas { -webkit-order: 0; order: 0; }
+		  	.middle > .mapCanvas, header, footer { min-height: 50px; max-height: 50px; }
+		  }
 		</style>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu4jIGqO52nAL52Hlf-MNu5fgX9NZn0T4" type="text/javascript">
 		</script>
@@ -18,17 +33,22 @@
 	</head>
 	<body>
 		<div class='header'>
-			<label>Search:</label>
-			<input data-bind="value:filter, valueUpdate: 'afterkeydown'" type="text" placeholder='Filter places...'>
+			<label>Search: </label>
+			<input id="filterTerm" data-bind="event: { keyup: filter}" type="text" placeholder='Filter places...' value="">
 			<!--data-bind="value:currentLocation().names, valueUpdate:'keyup'"-->
 		</div>
-		<div class='list'>
-			<h3>Key Locations</h3>
-			<ul data-bind="foreach: initialPlaces">
-				<li><span data-bind="text: name, click: $parent.show_info"></span>
-				</li>
-			</ul>
+		<div class="middle">
+			<div class='list'>
+				<h3>Key Locations</h3>
+				<ul class="locList" data-bind="foreach: placeList">
+					<li><span data-bind="text: name, click: $parent.show_info"></span>
+					</li>
+				</ul>
+			</div>
+			<div class ="mapCanvas" id="map-canvas"></div>
 		</div>
-		<div id="map-canvas"></div>
+		<div class='footer'>
+			<img src="poweredByFoursquare.png">
+		</div>
 	</body>
 </html>
