--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Kacy's Project 5</title>
-		<meta name="viewport" content="width=device-width">
-		<link href='css/style.css' rel='stylesheet' type='text/css'>
-		<link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<link href='css/offline-theme-chrome.css' rel='stylesheet'>
+		<link href='css/offline-language-english-indicator.css' rel='stylesheet'>
+		<link href='css/bootstrap.min.css' rel='stylesheet'>
+		<link href='css/style.css' rel='stylesheet'>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu4jIGqO52nAL52Hlf-MNu5fgX9NZn0T4" type="text/javascript">
 		</script>
-		<script src="js/knockout-3.3.0.js" type="text/javascript"></script>
+		<script src="js/offline.min.js"></script>
+		<script src="js/knockout-3.3.0.js"></script>
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/app.js"></script>
 	</head>
@@ -22,12 +25,13 @@
 				<div class="col-md-3">
 					<h3>Key Locations</h3>
 					<ul class="locList" data-bind="foreach: placeList">
-						<li><span data-bind="text: name, click: $parent.show_info"></span>
+						<li>
+							<span data-bind="text: name, click: $parent.show_info"></span>
 						</li>
 					</ul>
 				</div>
 				<div class="col-md-9">
-					<div id="map-canvas"></div>
+					<div id="map-canvas" class="mapCanvas"></div>
 				</div>
 			</div>
 		</main>
