Remove extra offline css page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Kacy's Project 5</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link href='css/offline-theme-chrome.css' rel='stylesheet'>
-		<link href='css/offline-theme-chrome-indicator.css' rel='stylesheet'>
+		<!--<link href='css/offline-theme-chrome-indicator.css' rel='stylesheet'>-->
 		<link href='css/offline-language-english.css' rel='stylesheet'>
 		<link href='css/offline-language-english-indicator.css' rel='stylesheet'>
 		<link href='css/bootstrap.min.css' rel='stylesheet'>
